<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePageActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/linear_layout"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/profile"
        android:textColor="@color/foreground_element"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"

        android:background="@color/dark_grey"
        />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="@id/email_et"
                app:layout_constraintBottom_toBottomOf="@id/email_et"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/email_tv"
                android:textColor="@color/black"
                />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:editable="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toEndOf="@id/phone_tv"
            app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="@id/name_et"
                app:layout_constraintBottom_toBottomOf="@id/name_et"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/name_tv"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/email_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/phone_tv"
                android:layout_margin="10dp"
                android:id="@+id/name_et"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone_tv"
                app:layout_constraintTop_toBottomOf="@id/name_tv"
                android:text="@string/phone_number"
                android:layout_margin="10dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/phone_et"
                app:layout_constraintBottom_toBottomOf="@id/phone_et"
                android:textColor="@color/black"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/phone_tv"
                android:layout_margin="10dp"
                android:id="@+id/phone_et"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/sign_out_btn"
                android:background="@color/foreground_element"
                android:layout_margin="10dp"
                android:text="@string/edit_infromation"
                android:id="@+id/edit_btn"
                android:inputType="number"
                android:textColor="@color/dark_grey"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/foreground_element"
            android:layout_margin="10dp"
            android:text="@string/sign_out"
            android:id="@+id/sign_out_btn"
            android:textColor="@color/dark_grey"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/foreground_element"
        ></com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>